# esp32-bms-monitor

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md  build_spiffs.sh  deploy_to_nas.sh  flash_spiffs.sh  idf_component.yml  idf_ext.py  led_color_and_pattern_scheme.md  partitions.csv  platformio.ini  requirements.txt  sdkconfig.defaults  status_leds_technical_implementation_plan.md
components/daly_bms/: CMakeLists.txt  daly_bms.c
components/device_id/: CMakeLists.txt  device_id.cpp
components/indicator_pixel/: CMakeLists.txt  README.md  indicator_pixel.cpp
components/logging/: CMakeLists.txt  README.md  SD_CARD_LOGGING.md  http_log_sink.cpp  http_log_sink.h  log_manager.cpp  log_manager.h  log_serializers.cpp  log_serializers.h  log_sink.h  mqtt_log_sink.cpp  mqtt_log_sink.h  sd_card_log_sink.cpp  sd_card_log_sink.h  serial_log_sink.cpp  serial_log_sink.h  tcp_log_sink.cpp  tcp_log_sink.h  udp_log_sink.cpp  udp_log_sink.h
data/: mqtt_config_example.txt
docs/: LOCAL_OTA_SETUP.md  OTA_DEPLOYMENT_GUIDE.md  OTA_QUICK_START.md  esp32-display-module.txt  esp32e_pin_allocation.md  led_color_and_pattern_scheme.md  lgfx_example.cpp
include/: applog.h  bms_interface.h  bms_snapshot.h  datalog.h  display.h  log_sink.h  logger.h  logging.h  mqtt_log_sink.h  mqtt_manager.h  mqtt_sink.h  ota_status.h  output.h  serial_log_sink.h  serial_sink.h  sntp_manager.h  time_manager.h  wifi_manager.h
main/: CMakeLists.txt  idf_component.yml  logging.cpp  main.cpp  output.cpp  sntp_manager.cpp
src/: applog.cpp  datalog.cpp  display.cpp  logger.cpp  logging.cpp  main.cpp  mqtt_log_sink.cpp  mqtt_manager.cpp  mqtt_sink.cpp  serial_log_sink.cpp  serial_sink.cpp  time_manager.cpp  wifi_manager.cpp
tools/: debug_mqtt.py  idf_ota_extension.py  ota_deploy.py  project_include.cmake  setup_local_ota_server.sh  setup_ota.sh  test_ota_check.py
(+30 files in other folders)
